crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__class__inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/inherited_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method inFoo [(local this @0)] []
         (block
            (print "in foo"))))
   (class Bar (global @2) (global Foo @1)
      (method inBar [(local this @0)] [None]
         (block
            (print "in bar"))))
   (class Baz (global @3) (global Bar @2)
      (method inBaz [(local this @0)] [None]
         (block
            (print "in baz"))))
   (var baz (global @4) (call +4 (global Baz @3)))
   (expr (call +5 (attr (global baz @4) inFoo)))
   (expr (call +5 (attr (global baz @4) inBar)))
   (expr (call +5 (attr (global baz @4) inBaz))))

----- stderr -----
