crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__class__local_inherit_other.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/local_inherit_other.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @1) ∅)
   (fun f (global @2) [] []
      (block
         (class B (local @0) (global A @1))
         (return (local B @0))))
   (print (call +3 (global f @2))))

----- stderr -----
