crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__class__local_reference_self.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/local_reference_self.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (class Foo (cell @0) ∅
         (method returnSelf [(local this @0)] [Some(0)]
            (block
               (return (cell Foo @0)))))
      (print (call +1 (attr (call +1 (cell Foo @0)) returnSelf)))))

----- stderr -----
