crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__class__reference_self.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/reference_self.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method returnSelf [] []
         (block
            (return (global Foo @1)))))
   (print (call +2 (attr (call +2 (global Foo @1)) returnSelf))))

----- stderr -----
